@@ -5,7 +5,7 @@ buildscript {
         maven { url 'https://jitpack.io' }
     }
     dependencies {
-        classpath("net.serenity-bdd:serenity-gradle-plugin:2.2.9")
+        classpath("net.serenity-bdd:serenity-gradle-plugin:2.4.34")
         classpath 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.7.4'
     }
 }
@@ -20,7 +20,7 @@ plugins {
     id 'info.solidsoft.pitest' version '1.7.4'
     id 'com.github.ben-manes.versions' version '0.40.0'
     id 'org.sonarqube' version '3.3'
-    id 'au.com.dius.pact' version '4.3.6'
+    id 'au.com.dius.pact' version '4.3.7'
     id 'com.github.spacialcircumstances.gradle-cucumber-reporting' version '0.1.22'
 }
 
@@ -33,23 +33,25 @@ apply plugin: 'io.spring.dependency-management'
 
 def versions = [
         junit          : '5.8.2',
-        lombok         : '1.18.6',
+        lombok         : '1.18.22',
         pitest         : '1.7.4',
         reformLogging  : '5.1.7',
         reformS2sClient: '4.0.2',
-        serenity       : '2.1.0',
+        serenity       : '2.2.12',
         springBoot     : '2.6.6',
+        spring         : '5.3.20',
+        springSecurity : '5.6.3',
         springHystrix  : '2.1.1.RELEASE',
         swagger2Version: '2.10.5',
         pact_version   : '4.1.7',
         rest_assured   : '3.3.0',
         cucumber       : '5.7.0',
         feign_jackson  : '9.7.0',
-        drools         : '7.66.0.Final',
+        drools         : '7.69.0.Final',
         log4JVersion   : '2.17.1',
         logbackVersion : '1.2.10',
         launchDarklySdk: '5.7.0',
-        netty_version  : '4.1.75.Final'
+        netty_version  : '4.1.77.Final'
 
 ]
 
@@ -64,9 +66,14 @@ pmd {
 group = 'uk.gov.hmcts.reform.orgrolemapping'
 version = '0.0.1'
 
-allprojects {
-    sourceCompatibility = '11'
-    targetCompatibility = '11'
+tasks.withType(JavaExec).configureEach {
+    javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
 }
 
 jacocoTestCoverageVerification {
@@ -130,18 +137,34 @@ tasks.withType(JavaCompile) {
     options.compilerArgs << "-Xlint:unchecked" << "-Werror"
 }
 
-task functional(type: Test, description: 'Runs the functional tests.', group: 'Verification') {
-    testClassesDirs = sourceSets.functionalTest.output.classesDirs
-    classpath = sourceSets.functionalTest.runtimeClasspath
-    doFirst {
+task functional(type: JavaExec) {
+    description = "Runs the functional tests"
+    group = "Verification"
+
+    generateCucumberReports.enabled = false
+    main("uk.gov.hmcts.reform.orgrolemapping.befta.OrgRoleMappingAmBeftaMain")
+    classpath += configurations.cucumberRuntime + sourceSets.functionalTest.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
+    args = ['--strict',  '--tags', 'not @Ignore',
+            '--plugin', "json:${rootDir}/target/cucumber.json", '--plugin', "junit:${buildDir}/test-results/functional/cucumber.xml",
+            '--glue', 'uk.gov.hmcts.befta.player', 'src/functionalTest/resources/features'
+           ]
+    // '--add-opens=...' added to suppress 'WARNING: An illegal reflective access operation has occurred' in uk.gov.hmcts.befta.util.CucumberStepAnnotationUtils
+    jvmArgs '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
+
+    finalizedBy {
         generateCucumberReports.enabled = true
-        javaexec {
-            main = "uk.gov.hmcts.reform.orgrolemapping.befta.OrgRoleMappingAmBeftaMain"
-            classpath += configurations.cucumberRuntime + sourceSets.functionalTest.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
-            args = ['--plugin', "json:${projectDir}/target/cucumber.json", '--tags', 'not @Ignore', '--glue',
-                    'uk.gov.hmcts.befta.player', 'src/functionalTest/resources/features/']
+        generateCucumberReports {
+            doLast{
+                def functionalReportsFolder = "${rootDir}/target/cucumber/functional-html-reports/"
+                delete functionalReportsFolder
+                new File(functionalReportsFolder).mkdirs()
+                file("${rootDir}/target/cucumber/cucumber-html-reports").renameTo(file(functionalReportsFolder))
+                logger.quiet("Functional test report moved to ---> file://$functionalReportsFolder/overview-features.html")
+            }
         }
     }
+
+    outputs.upToDateWhen { false }
 }
 
 task integration(type: Test, description: 'Runs the integration tests.', group: 'Verification') {
@@ -169,20 +192,19 @@ task fortifyScan(type: JavaExec)  {
 jacocoTestReport {
     executionData(test)
     reports {
-        xml.enabled(true)
-        csv.enabled(false)
-        xml.destination file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
+        xml.required = true
+        csv.required = false
+        xml.outputLocation = file("${project.buildDir}/reports/jacoco/test/jacocoTestReport.xml")
     }
 }
 
 project.tasks['sonarqube'].dependsOn jacocoTestReport
 
 jacoco {
-    toolVersion = "0.8.5"
+    toolVersion = "0.8.7"
 }
 
 pitest {
-    pitestVersion = "1.7.4"
     testPlugin = "junit5"
     targetClasses = ['uk.gov.hmcts.reform.*']
     excludedClasses = ['uk.gov.hmcts.reform.orgrolemapping.OrgRoleMappingApplication',
@@ -286,26 +308,26 @@ dependencies {
     implementation(group: 'org.springframework.boot', name:'spring-boot-starter-oauth2-resource-server', version: versions.springBoot)
 
 
-    implementation group: 'org.springframework', name: 'spring-core', version: '5.3.19'
-    implementation group: 'org.springframework', name: 'spring-beans', version: '5.3.19'
-    implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.6.2'
-    implementation group: 'org.springframework.security', name:'spring-security-web', version: '5.6.3'
-    implementation group: 'org.springframework.security', name:'spring-security-config', version: '5.6.2'
+    implementation group: 'org.springframework.security', name: 'spring-security-core', version: versions.springSecurity
+    implementation group: 'org.springframework.security', name:'spring-security-web', version: versions.springSecurity
+    implementation group: 'org.springframework.security', name:'spring-security-config', version: versions.springSecurity
     implementation group: 'org.springframework.retry', name: 'spring-retry', version: '1.3.1'
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.5.RELEASE'
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.0.4'
     implementation group: 'org.springframework.hateoas', name: 'spring-hateoas', version: '1.2.2'
-    implementation group: 'org.springframework', name: 'spring-aop', version: '5.3.19'
-    implementation group: 'org.springframework', name: 'spring-aspects', version: '5.3.19'
-    implementation group: 'org.springframework', name: 'spring-context', version: '5.3.19'
-    implementation group: 'org.springframework', name: 'spring-context-support', version: '5.3.18'
-    implementation group: 'org.springframework', name: 'spring-expression', version: '5.3.18'
-    implementation group: 'org.springframework', name: 'spring-jcl', version: '5.3.18'
-    implementation group: 'org.springframework', name: 'spring-jdbc', version: '5.3.19'
-    implementation group: 'org.springframework', name: 'spring-orm', version: '5.3.19'
-    implementation group: 'org.springframework', name: 'spring-tx', version: '5.3.19'
-    implementation group: 'org.springframework', name: 'spring-web', version: '5.3.18'
-    implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.18'
+    implementation group: 'org.springframework', name: 'spring-core', version: versions.spring
+    implementation group: 'org.springframework', name: 'spring-beans', version: versions.spring
+    implementation group: 'org.springframework', name: 'spring-aop', version: versions.spring
+    implementation group: 'org.springframework', name: 'spring-aspects', version: versions.spring
+    implementation group: 'org.springframework', name: 'spring-context', version: versions.spring
+    implementation group: 'org.springframework', name: 'spring-context-support', version: versions.spring
+    implementation group: 'org.springframework', name: 'spring-expression', version: versions.spring
+    implementation group: 'org.springframework', name: 'spring-jcl', version: versions.spring
+    implementation group: 'org.springframework', name: 'spring-jdbc', version: versions.spring
+    implementation group: 'org.springframework', name: 'spring-orm', version: versions.spring
+    implementation group: 'org.springframework', name: 'spring-tx', version: versions.spring
+    implementation group: 'org.springframework', name: 'spring-web', version: versions.spring
+    implementation group: 'org.springframework', name: 'spring-webmvc', version: versions.spring
 
     implementation group: 'io.springfox', name: 'springfox-swagger2', version: versions.swagger2Version
     implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: versions.swagger2Version
@@ -332,7 +354,7 @@ dependencies {
         exclude group: 'com.google.protobuf', module: 'protobuf-java'
     }
 
-    implementation group: 'org.flywaydb', name: 'flyway-core', version: '8.5.7'
+    implementation group: 'org.flywaydb', name: 'flyway-core', version: '8.5.10'
     //Added for S2S and User Authentication
     implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: versions.reformS2sClient
     implementation group: 'javax.inject', name: 'javax.inject', version: '1'
@@ -346,13 +368,13 @@ dependencies {
     }
     implementation group: 'com.azure', name: 'azure-core', version: '1.16.0'
     implementation group: 'com.azure', name: 'azure-messaging-servicebus', version: '7.2.2'
-    implementation group: 'io.projectreactor', name: 'reactor-core', version: '3.4.0'
+    implementation group: 'io.projectreactor', name: 'reactor-core', version: '3.4.18'
     implementation group: 'commons-cli', name: 'commons-cli', version: '1.4'
     implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: versions.launchDarklySdk
-    implementation group: 'com.google.guava', name: 'guava', version: '30.1-jre'
-    implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '2.8.5'
+    implementation group: 'com.google.guava', name: 'guava', version: '31.1-jre'
+    implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.1.0'
     implementation group: 'org.apache.maven', name: 'maven-core', version: '3.8.5'
-    implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.3'
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.6'
     implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '8.19'
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
     implementation group: 'com.github.hmcts', name: 'idam-java-client', version: '2.0.1'
@@ -360,16 +382,16 @@ dependencies {
     //CVE-2021-35515, CVE-2021-35516, CVE-2021-35517, CVE-2021-36090
     // To be cleaned up later
     implementation group: 'org.apache.commons', name: 'commons-compress', version: '1.21'
-    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '10.0.16'
-    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.58'
+    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '10.0.21'
+    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.63'
 
     implementation group:'com.fasterxml.jackson.datatype', name:'jackson-datatype-jsr310'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.2.1'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.3'
     implementation group: 'com.fasterxml.jackson', name: 'jackson-bom', version: '2.13.2.20220324', ext: 'pom'
 
-    implementation group: 'org.apache.poi', name: 'poi', version: '5.2.1'
-    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.1'
-    implementation group: 'org.apache.poi', name: 'poi-scratchpad', version: '5.2.1'
+    implementation group: 'org.apache.poi', name: 'poi', version: '5.2.2'
+    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.2'
+    implementation group: 'org.apache.poi', name: 'poi-scratchpad', version: '5.2.2'
 
     //Dependent on drools Jar. Can be removed CVE-2021-26291
     implementation group: 'org.apache.maven', name: 'maven-core', version: '3.8.5'
@@ -422,8 +444,8 @@ dependencies {
     implementation (group: 'io.netty', name: 'netty-resolver-dns-native-macos', version: versions.netty_version) {
         because 'In Netty before version 4.1.66.Final there is a vulnerability that enables request smuggling.'
     }
-    testImplementation('com.opentable.components:otj-pg-embedded:1.0.0')
-    testImplementation('com.github.tomakehurst:wiremock-jre8:2.33.1')
+    testImplementation('com.opentable.components:otj-pg-embedded:1.0.1')
+    testImplementation('com.github.tomakehurst:wiremock-jre8:2.33.2')
     testImplementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.32'
 
     pitest 'org.pitest:pitest-junit5-plugin:0.15'
@@ -438,14 +460,14 @@ dependencies {
     testImplementation group: 'org.pitest', name: 'pitest', version: versions.pitest
     testImplementation group: 'info.solidsoft.gradle.pitest', name:'gradle-pitest-plugin', version: versions.pitest
     testImplementation 'org.codehaus.sonar-plugins:sonar-pitest-plugin:0.5'
-    testImplementation('org.springframework.cloud:spring-cloud-contract-wiremock:3.1.1')
+    testImplementation('org.springframework.cloud:spring-cloud-contract-wiremock:3.1.2')
     testImplementation group: 'org.springframework.boot', name:'spring-boot-starter-test', version: versions.springBoot
-    testImplementation 'org.springframework.security:spring-security-test:5.6.3'
+    testImplementation group: 'org.springframework.security',name:'spring-security-test', version: versions.springSecurity
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '2.2.5.RELEASE'
     testImplementation(group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: versions.springBoot) {
         exclude group: 'junit', module: 'junit'
     }
-    testImplementation 'com.github.hmcts:befta-fw:8.7.1'
+    testImplementation 'com.github.hmcts:befta-fw:9.0.0-CCD-3068.1'
 
     testImplementation(group: 'io.cucumber', name: 'cucumber-java', version: versions.cucumber) {
         exclude group: 'javascript', module: 'jquery'
@@ -486,20 +508,15 @@ dependencies {
     smokeTestCompileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
     smokeTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
 
-    contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: versions.pact_version
     contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'java8', version: versions.pact_version
     contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: versions.pact_version
-    contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'java8', version: versions.pact_version
+    contractTestImplementation group: 'au.com.dius.pact.provider', name: 'junit5', version: versions.pact_version
+    contractTestImplementation group: 'au.com.dius.pact.provider', name: 'spring', version: versions.pact_version
+    contractTestImplementation group: 'au.com.dius.pact.provider', name: 'junit5spring', version: versions.pact_version
 
     contractTestImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
     contractTestImplementation(group: "org.junit.jupiter", name: "junit-jupiter-api", version: versions.junit)
     contractTestRuntime(group: 'org.junit.jupiter', name:'junit-jupiter-engine', version: versions.junit)
-    contractTestImplementation(group: 'org.junit.jupiter', name:'junit-jupiter-api', version: versions.junit)
-    contractTestImplementation(group: 'org.springframework.boot', name:'spring-boot-starter-test', version: versions.springBoot)
-
-    contractTestImplementation group: 'au.com.dius.pact.provider', name: 'junit5', version: versions.pact_version
-    contractTestImplementation group: 'au.com.dius.pact.provider', name: 'spring', version: versions.pact_version
-    contractTestImplementation group: 'au.com.dius.pact.provider', name: 'junit5spring', version: versions.pact_version
 
     contractTestImplementation sourceSets.main.runtimeClasspath
     contractTestImplementation sourceSets.test.runtimeClasspath
